# ClassicGenAlgo

./: .gitignore  CMakeLists.txt
App/: CMakeLists.txt
App/AlgoLogger/: CMakeLists.txt
App/AlgoLogger/_api/: AlgoLoggerInterface.hpp  AlgoStatisticLogger.hpp
App/AlgoLogger/_src/: AlgoStatisticLogger.cpp
App/AlgoPerfTest/: CMakeLists.txt
App/AlgoPerfTest/_api/: AlgoPerfTest.hpp
App/AlgoPerfTest/_src/: AlgoPerfTest.cpp
App/AppContext/: CMakeLists.txt
App/AppContext/_api/: AppContext.hpp  AppContextInterface.hpp
App/AppContext/_src/: AppContext.cpp
App/AppStateMachine/: CMakeLists.txt
App/AppStateMachine/_api/: ErrorState.hpp  InitRunState.hpp  PreinitState.hpp  RunState.hpp  ShutdownState.hpp  StateInterface.hpp  StateMachine.hpp
App/AppStateMachine/_src/: ErrorState.cpp  InitRunState.cpp  PreinitState.cpp  RunState.cpp  ShutdownState.cpp  StateMachine.cpp
App/AppTypes/: CMakeLists.txt
App/AppTypes/_api/: GeneticAlgorithmTypes.hpp  Genome.hpp
App/AppTypes/_src/: Genome.cpp
App/CommonFunctions/: CMakeLists.txt
App/CommonFunctions/_api/: CommonFunctions.hpp
App/CrossoverAlgorithms/: CMakeLists.txt
App/CrossoverAlgorithms/_api/: ArithmeticCrossover.hpp  AveragingCrossover.hpp  BlendAlphaBetaCrossover.hpp  BlendAlphaCrossover.hpp  CrossoverAlgoBase.hpp  CrossoverIndexBase.hpp  DiscreteCrossover.hpp  LinearCrossover.hpp  SinglePointCrossover.hpp  TwoPointCrossover.hpp  UniformCrossover.hpp
App/CrossoverAlgorithms/_src/: ArithmeticCrossover.cpp  AveragingCrossover.cpp  BlendAlphaBetaCrossover.cpp  BlendAlphaCrossover.cpp  DiscreteCrossover.cpp  LinearCrossover.cpp  SinglePointCrossover.cpp  TwoPointCrossover.cpp  UniformCrossover.cpp
App/EvaluateAlgorithms/: CMakeLists.txt
App/EvaluateAlgorithms/_api/: EvaluateAlgoBase.hpp  PyFunctionEvaluateAlgo.hpp
App/EvaluateAlgorithms/_src/: PyFunctionEvaluateAlgo.cpp
App/FaultsManager/: CMakeLists.txt
App/FaultsManager/_api/: FaultsManager.hpp  FaultsManagerInterface.hpp
App/FaultsManager/_src/: FaultsManager.cpp
App/Functions/: CMakeLists.txt
App/Functions/_api/: FunctionInterface.hpp  FunctionObserver.hpp  HypersphereFunction.hpp
App/Functions/_py/: __init__.py  benchmark_funcs.py  function_caller.py  functions.py  plotting_3d.py  plotting_fitness.py  visualization.py  wrappers.py
App/Functions/_src/: AckleyFunction.hpp  BC_1.hpp  BC_2.hpp  BC_35.hpp  DeJong3Function.hpp  DeJong5Function.hpp  EasomFunction.hpp  EggHolderFunction.hpp  FunctionObserver.cpp  GoldsteinAndPrice.hpp  GriewankCEC2014Function.hpp  GriewankFunction.hpp  HimmelblauFunction.hpp  HyperellipsoidFunction.hpp  HypersphereFunction.hpp  KeaneFunction.hpp  McCormickFunction.hpp  MichalewiczFunction.hpp  PichenyGoldsteinAndPrice.hpp  PitsAndHolesFunction.hpp  RanaFunction.hpp  RastriginFunction.hpp  RosenbrockFunction.hpp  Schaffer2Function.hpp  SchwefelFunction.hpp  StyblinskiTangFunction.hpp
App/GeneticAlgorithm/: CMakeLists.txt
App/GeneticAlgorithm/_api/: CrossoverAlgoBase.hpp  GeneticAlgorithm.hpp  GeneticAlgorithmInterface.hpp  PopulationFabricBase.hpp  SelectionAlgoBase.hpp  SinglePointCrossover.hpp
App/GeneticAlgorithm/_src/: BestSelectionAlgo.cpp  GeneticAlgorithm.cpp  WorstSelectionAlgo.cpp
App/Main/: AppProvider.hpp  CMakeLists.txt  main.cpp
App/MainDashboard/: CMakeLists.txt
App/MainDashboard/_api/: MainWindow.hpp  WindowInterface.hpp
App/MainDashboard/_assets/: AppIcon.rc  AssetsWindowDashboard.qrc
App/MainDashboard/_src/: MainWindow.cpp  mainwindow.ui
App/MutationAlgorithms/: CMakeLists.txt
App/MutationAlgorithms/_api/: EdgeMutationAlgo.hpp  GaussMutationAlgo.hpp  InwerseMutationAlgo.hpp  MutationAlgoBase.hpp  MutationDecider.hpp  OnePointMutationAlgo.hpp  TwoPointMutationAlgo.hpp  UniformMutationAlgo.hpp
App/MutationAlgorithms/_src/: EdgeMutationAlgo.cpp  GaussMutationAlgo.cpp  InwerseMutationAlgo.cpp  OnePointMutationAlgo.cpp  TwoPointMutationAlgo.cpp  UniformMutationAlgo.cpp
App/PopulationFabric/: CMakeLists.txt
App/PopulationFabric/_api/: RandomPopulationFabric.hpp
App/PopulationFabric/_src/: RandomPopulationFabric.cpp
App/PyModule/: CMakeLists.txt
App/PyModule/_api/: PyInterface.hpp  PyQt.hpp
App/PyModule/_src/: PyQt.cpp
App/RandomCore/: CMakeLists.txt
App/RandomCore/_api/: RandomCore.hpp
App/RandomCore/_src/: RandomCore.cpp
App/SelectionAlgorithms/: CMakeLists.txt
App/SelectionAlgorithms/_api/: BestSelectionAlgo.hpp  RouletteSelectionAlgo.hpp  SelectionAlgoBase.hpp  TournamentSelectionAlgo.hpp  WorstSelectionAlgo.hpp
App/SelectionAlgorithms/_src/: BestSelectionAlgo.cpp  RouletteSelectionAlgo.cpp  TournamentSelectionAlgo.cpp
App/UiDataHolder/: CMakeLists.txt
App/UiDataHolder/_api/: UiData.h  UiDataHolder.hpp  UiDataHolderInterface.hpp
App/UiDataHolder/_src/: UiDataHolder.cpp
scripts/: applyPyPatches.ps1  build_python_install.ps1
