find_package(QT NAMES Qt6 REQUIRED COMPONENTS Core StateMachine Widgets)
find_package(Qt6 REQUIRED COMPONENTS Core StateMachine Widgets)

include_directories(Common)

add_subdirectory(AppContext)
add_subdirectory(AppStateMachine)
add_subdirectory(AppTypes)
add_subdirectory(CommonFunctions)
add_subdirectory(GeneticAlgorithm)
add_subdirectory(FaultsManager)
add_subdirectory(Functions)
add_subdirectory(PyModule)
add_subdirectory(RandomCore)
add_subdirectory(UiDataHolder)
add_subdirectory(PopulationFabric)
add_subdirectory(EvaluateAlgorithms)
add_subdirectory(SelectionAlgorithms)
add_subdirectory(CrossoverAlgorithms)
add_subdirectory(MainDashboard)
add_subdirectory(Main)
